# conjectureextraction

./: .gitmodules  Data.md  README.md  accelerate.yml  chromadb.yml  pyproject.toml  rabbitmq.conf  rabbitmq.yml  sfttrain.py
diophantineequations/: deepseekprover.py  definition_retrieval.py  distillformalizersft.py  distributed.py  distributed_models.py  environment.py  evaluate_conjectures.py  googlesearch.py  hypothesis_rejection.py  lemma_add.py  lemma_embeddings.py  lemma_form.py  lemma_gen.py  lemma_prove.py  lemma_sketch.py  main.py  maindir.py  minif2fscraper.py  models.py  notify.py  prompts.py  putnamscraper.py  reprover.py  resetcollection.py  retrieve_definitions.py  testconnf.py  testembed.py  utils.py  vllmutils.py
diophantineequations/distributed/: gpu_lock.py  main.py  messages.py  queues.py
diophantineequations/distributed/workers/: abstract.py  conjecturer.py  environment.py  trainer.py
diophantineequations/distributed/workers/embed/: embed.py
diophantineequations/distributed/workers/formalizationtrain/: deepspeedconf.json  formalizer.py  grposinglestep.py  similarity.py  train.py
diophantineequations/distributed/workers/formalizer/: abstract.py  formalizer_gpt.py  (+1 more)
entrypoints/: embedcpu.sh  environment.sh  formalization.sh  formalizationkimina.sh  formalizationtrainer.sh  nosearch.sh  retrievalcpu.sh  search.sh  tactics.sh  tacticshammer.sh  trainer.sh
tests/: test_conclusion_false.py  test_get_lemma_from_file.py  test_lean_file.py  test_premise_suffix.py  test_prove_distributed.py  test_replace_sorry.py  test_to_file.py
(+7 files in other folders)
